Sending measurements from building 1 of REDD to LIVE

--- a/Send_events_LIVE.ipynb
+++ b/Send_events_LIVE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 84,
    "metadata": {
     "collapsed": true
    },
@@ -10,24 +10,16 @@
    "source": [
     "import requests\n",
     "import urllib\n",
-    "import config"
+    "from config import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 86,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "host = 'http://live.intelie.com/services/plugin-restinput/testeThiago/get?'\n",
     "\n",
@@ -41,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
@@ -50,16 +42,239 @@
     "from nilmtk import DataSet, TimeFrame\n",
     "import nilmtk\n",
     "from nilmtk.utils import print_dict\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from time import sleep"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python2.7/site-packages/IPython/core/formatters.py:92: DeprecationWarning: DisplayFormatter._ipython_display_formatter_default is deprecated: use @default decorator instead.\n",
+      "  def _ipython_display_formatter_default(self):\n",
+      "/opt/conda/lib/python2.7/site-packages/IPython/core/formatters.py:98: DeprecationWarning: DisplayFormatter._formatters_default is deprecated: use @default decorator instead.\n",
+      "  def _formatters_default(self):\n",
+      "/opt/conda/lib/python2.7/site-packages/IPython/core/formatters.py:677: DeprecationWarning: PlainTextFormatter._deferred_printers_default is deprecated: use @default decorator instead.\n",
+      "  def _deferred_printers_default(self):\n",
+      "/opt/conda/lib/python2.7/site-packages/IPython/core/formatters.py:669: DeprecationWarning: PlainTextFormatter._singleton_printers_default is deprecated: use @default decorator instead.\n",
+      "  def _singleton_printers_default(self):\n",
+      "/opt/conda/lib/python2.7/site-packages/IPython/core/formatters.py:672: DeprecationWarning: PlainTextFormatter._type_printers_default is deprecated: use @default decorator instead.\n",
+      "  def _type_printers_default(self):\n",
+      "/opt/conda/lib/python2.7/site-packages/IPython/core/formatters.py:669: DeprecationWarning: PlainTextFormatter._singleton_printers_default is deprecated: use @default decorator instead.\n",
+      "  def _singleton_printers_default(self):\n",
+      "/opt/conda/lib/python2.7/site-packages/IPython/core/formatters.py:672: DeprecationWarning: PlainTextFormatter._type_printers_default is deprecated: use @default decorator instead.\n",
+      "  def _type_printers_default(self):\n",
+      "/opt/conda/lib/python2.7/site-packages/IPython/core/formatters.py:677: DeprecationWarning: PlainTextFormatter._deferred_printers_default is deprecated: use @default decorator instead.\n",
+      "  def _deferred_printers_default(self):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>CE appliance</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>air conditioner</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>air handling unit</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dish washer</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>electric furnace</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>electric oven</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>electric space heater</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>electric stove</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fridge</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>light</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>microwave</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>smoke alarm</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sockets</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>subpanel</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unknown</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>washer dryer</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>waste disposal unit</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       1  2  3  4  5  6\n",
+       "CE appliance           0  0  1  0  1  1\n",
+       "air conditioner        0  0  0  2  0  1\n",
+       "air handling unit      0  0  0  0  0  1\n",
+       "dish washer            1  1  1  1  1  1\n",
+       "electric furnace       0  0  1  1  1  0\n",
+       "electric oven          1  0  0  0  0  0\n",
+       "electric space heater  1  0  0  0  1  1\n",
+       "electric stove         1  1  0  1  0  1\n",
+       "fridge                 1  1  1  0  1  1\n",
+       "light                  3  1  5  4  5  1\n",
+       "microwave              1  1  1  0  1  0\n",
+       "smoke alarm            0  0  1  1  0  0\n",
+       "sockets                4  2  5  3  6  4\n",
+       "subpanel               0  0  0  0  2  0\n",
+       "unknown                2  0  1  3  1  1\n",
+       "washer dryer           1  1  1  1  1  1\n",
+       "waste disposal unit    0  1  1  0  1  0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ds = DataSet('/nilmtk/data/REDD/redd.h5')\n",
     "building = 1\n",
@@ -97,85 +312,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MeterGroup(meters=\n",
-      "  ElecMeter(instance=11, building=1, dataset='REDD', appliances=[Appliance(type='microwave', instance=1)])\n",
-      ")\n",
-      "MeterGroup(meters=\n",
-      "  MeterGroup(meters=\n",
-      "    ElecMeter(instance=3, building=1, dataset='REDD', appliances=[Appliance(type='electric oven', instance=1)])\n",
-      "    ElecMeter(instance=4, building=1, dataset='REDD', appliances=[Appliance(type='electric oven', instance=1)])\n",
-      "  )\n",
-      ")\n",
-      "MeterGroup(meters=\n",
-      "  ElecMeter(instance=13, building=1, dataset='REDD', appliances=[Appliance(type='electric space heater', instance=1)])\n",
-      ")\n",
-      "MeterGroup(meters=\n",
-      "  ElecMeter(instance=14, building=1, dataset='REDD', appliances=[Appliance(type='electric stove', instance=1)])\n",
-      ")\n",
-      "MeterGroup(meters=\n",
-      "  ElecMeter(instance=12, building=1, dataset='REDD', appliances=[Appliance(type='unknown', instance=1)])\n",
-      "  ElecMeter(instance=19, building=1, dataset='REDD', appliances=[Appliance(type='unknown', instance=2)])\n",
-      ")\n",
-      "MeterGroup(meters=\n",
-      "  ElecMeter(instance=5, building=1, dataset='REDD', appliances=[Appliance(type='fridge', instance=1)])\n",
-      ")\n",
-      "MeterGroup(meters=\n",
-      "  ElecMeter(instance=5, building=1, dataset='REDD', appliances=[Appliance(type='fridge', instance=1)])\n",
-      ")\n",
-      "MeterGroup(meters=\n",
-      "  ElecMeter(instance=5, building=1, dataset='REDD', appliances=[Appliance(type='fridge', instance=1)])\n",
-      ")\n",
-      "MeterGroup(meters=\n",
-      "  ElecMeter(instance=5, building=1, dataset='REDD', appliances=[Appliance(type='fridge', instance=1)])\n",
-      ")\n",
-      "MeterGroup(meters=\n",
-      "  ElecMeter(instance=9, building=1, dataset='REDD', appliances=[Appliance(type='light', instance=1)])\n",
-      "  ElecMeter(instance=17, building=1, dataset='REDD', appliances=[Appliance(type='light', instance=2)])\n",
-      "  ElecMeter(instance=18, building=1, dataset='REDD', appliances=[Appliance(type='light', instance=3)])\n",
-      ")\n",
-      "MeterGroup(meters=\n",
-      "  ElecMeter(instance=9, building=1, dataset='REDD', appliances=[Appliance(type='light', instance=1)])\n",
-      "  ElecMeter(instance=17, building=1, dataset='REDD', appliances=[Appliance(type='light', instance=2)])\n",
-      "  ElecMeter(instance=18, building=1, dataset='REDD', appliances=[Appliance(type='light', instance=3)])\n",
-      ")\n",
-      "MeterGroup(meters=\n",
-      "  ElecMeter(instance=9, building=1, dataset='REDD', appliances=[Appliance(type='light', instance=1)])\n",
-      "  ElecMeter(instance=17, building=1, dataset='REDD', appliances=[Appliance(type='light', instance=2)])\n",
-      "  ElecMeter(instance=18, building=1, dataset='REDD', appliances=[Appliance(type='light', instance=3)])\n",
-      ")\n",
-      "MeterGroup(meters=\n",
-      "  ElecMeter(instance=6, building=1, dataset='REDD', appliances=[Appliance(type='dish washer', instance=1)])\n",
-      ")\n",
-      "MeterGroup(meters=\n",
-      "  ElecMeter(instance=6, building=1, dataset='REDD', appliances=[Appliance(type='dish washer', instance=1)])\n",
-      ")\n",
-      "MeterGroup(meters=\n",
-      "  ElecMeter(instance=7, building=1, dataset='REDD', appliances=[Appliance(type='sockets', instance=1)])\n",
-      "  ElecMeter(instance=8, building=1, dataset='REDD', appliances=[Appliance(type='sockets', instance=2)])\n",
-      "  ElecMeter(instance=15, building=1, dataset='REDD', appliances=[Appliance(type='sockets', instance=3)])\n",
-      "  ElecMeter(instance=16, building=1, dataset='REDD', appliances=[Appliance(type='sockets', instance=4)])\n",
-      ")\n",
-      "MeterGroup(meters=\n",
-      "  MeterGroup(meters=\n",
-      "    ElecMeter(instance=10, building=1, dataset='REDD', appliances=[Appliance(type='washer dryer', instance=1)])\n",
-      "    ElecMeter(instance=20, building=1, dataset='REDD', appliances=[Appliance(type='washer dryer', instance=1)])\n",
-      "  )\n",
-      ")\n",
-      "MeterGroup(meters=\n",
-      "  ElecMeter(instance=11, building=1, dataset='REDD', appliances=[Appliance(type='microwave', instance=1)])\n",
-      ")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ds = DataSet('/nilmtk/data/REDD/redd.h5')\n",
     "building = 1\n",
@@ -187,23 +328,44 @@
     "    appliance_types.add(appliance.type['type'])\n",
     "# Count quantity of appliances at dataset\n",
     "out = {}\n",
-    "for appliance in list(appliance_types):\n",
-    "    try:\n",
-    "        elec = ds.buildings[1].elec\n",
-    "        elec_appliance = elec.select_using_appliances(type=appliance)\n",
-    "    except:\n",
-    "        pass\n",
-    "    print(elec_appliance)\n",
-    "    #print(type(elec['fridge']))\n",
-    "    #df = next(elec['fridge'].load(sample_period=60))\n",
-    "#count = 1\n",
+    "elec = ds.buildings[1].elec\n",
     "\n",
-    "#for line in df.itertuples():\n",
-    "    #event = {'timestamp':line[0].value/1000000, 'power':line[1]}\n",
-    "    #print(event)\n",
-    "#    count += 1\n",
-    "#    if count>10:\n",
-    "#        break"
+    "sendEvents = 0\n",
+    "for i, meter in enumerate(elec.submeters().meters):\n",
+    "    #print(\"{} -- {} -- {}\".format(i,meter,type(meter)))\n",
+    "    power = meter.power_series()\n",
+    "    chunk = next(power)\n",
+    "    #print(meter.label(pretty=True))\n",
+    "    df = next(meter.load(sample_period=60))\n",
+    "    count = 0\n",
+    "\n",
+    "    if isinstance(meter.instance(), tuple):\n",
+    "        instance = '_'.join(str(e) for e in meter.instance())\n",
+    "    else:\n",
+    "        instance = meter.instance()\n",
+    "    applianceType = meter.label(pretty=True)\n",
+    "    host = 'http://live.intelie.com/services/plugin-restinput/testeThiago/get?'\n",
+    "\n",
+    "    for line in df.itertuples():\n",
+    "        event = {'__type':'REDD',\n",
+    "                 'building':1,\n",
+    "                 'applianceType':applianceType, \n",
+    "                 'instance':instance, \n",
+    "                 'power':line[1], \n",
+    "                 'measureTime':int(line[0].value/1000000)\n",
+    "                 #'__skiprealtime':'true',\n",
+    "                 #'__overwrite':'['+'\"applianceType\"'+','+'\"instance\"'+']'\n",
+    "                }\n",
+    "        #print(event)\n",
+    "        u = requests.get(host+urllib.urlencode(event), auth=(user, password))\n",
+    "        #print u.url\n",
+    "        sendEvents += 1\n",
+    "        count += 1\n",
+    "        if sendEvents%1000 == 0:\n",
+    "            sleep(60)\n",
+    "            #break\n",
+    "    print(\"Was sended {} events of the appliance {}[{}]\".format(count, applianceType, instance))\n",
+    "print(\"Was sended {} events of the building {}\".format(sendEvents, building))"
    ]
   }
  ],
