Send events to LIVE using post request with batch endpoint

--- a/Send_events_LIVE.ipynb
+++ b/Send_events_LIVE.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 157,
    "metadata": {
     "collapsed": false
    },
@@ -312,11 +312,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-148-c2056deece34>, line 55)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-148-c2056deece34>\"\u001b[1;36m, line \u001b[1;32m55\u001b[0m\n\u001b[1;33m    print(\"Was sended {} events of the appliance {}[{}]\".format(count, applianceType, instance))\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "ds = DataSet('/nilmtk/data/REDD/redd.h5')\n",
     "building = 1\n",
@@ -344,26 +353,141 @@
     "    else:\n",
     "        instance = meter.instance()\n",
     "    applianceType = meter.label(pretty=True)\n",
-    "    host = 'http://live.intelie.com/services/plugin-restinput/testeThiago/get?'\n",
+    "    #host = 'http://live.intelie.com/services/plugin-restinput/testeThiago/get?'\n",
+    "    host = 'https://live.intelie.com/services/plugin-restinput/testeThiago/batch?'\n",
+    "    \n",
+    "    for line in df.itertuples():\n",
+    "        event = {#'__type':'REDD',\n",
+    "                 '__type':'__teste',\n",
+    "                 'building':1,\n",
+    "                 'applianceType':applianceType, \n",
+    "                 'instance':instance, \n",
+    "                 'power':str(line[1]),\n",
+    "                 'timestamp':int(line[0].value/1000000),\n",
+    "                 '__overwrite':[\"applianceType\",\"instance\"],\n",
+    "                 '__skiprealtime':True\n",
+    "                }\n",
+    "        #print(event)\n",
+    "        headers = {\n",
+    "                    'Content-Type': \"application/json\",\n",
+    "                    'Authorization': \"Basic dGhpYWdvLmdpYWNoZXR0b0BpbnRlbGllLmNvbS5icjowLWpWU0ZjQA==\"\n",
+    "                    }\n",
+    "        #u = requests.get(host+urllib.urlencode(event), auth=(user, password))\n",
+    "        u = requests.post(host, headers=headers, data=json.dumps(message))\n",
+    "        #print u.url\n",
+    "        sendEvents += 1\n",
+    "        count += 1\n",
+    "        if sendEvents%5 == 0:\n",
+    "            \n",
+    "            #sleep(60)\n",
+    "            #break\n",
+    "    print(\"Was sended {} events of the appliance {}[{}]\".format(count, applianceType, instance))\n",
+    "print(\"Was sended {} events of the building {}\".format(sendEvents, building))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "host = 'https://live.intelie.com/services/plugin-restinput/testeThiago/batch?'\n",
+    "message = [{\"timestamp\":1303132920000,\n",
+    "            \"__type\":\"__teste\",\n",
+    "            \"power\":\"6.2\",\n",
+    "            \"applianceType\":\"Fridge\",\n",
+    "            \"instance\":\"5\",\n",
+    "           '__overwrite':[\"applianceType\",\"instance\"], \n",
+    "            '__skiprealtime':'false'},\n",
+    "            {\"timestamp\":1303132920000,\n",
+    "             \"__type\":\"__teste\",\n",
+    "             \"power\":\"6.3\",\n",
+    "             \"applianceType\":\"Fridge2\",\n",
+    "             \"instance\":\"5\",\n",
+    "             '__overwrite':[\"applianceType\",\"instance\"],\n",
+    "             '__skiprealtime':True}]\n",
+    "headers = {\n",
+    "    'Content-Type': \"application/json\",\n",
+    "    'Authorization': \"Basic dGhpYWdvLmdpYWNoZXR0b0BpbnRlbGllLmNvbS5icjowLWpWU0ZjQA==\"\n",
+    "    }\n",
+    "u = requests.post(host, headers=headers, data=json.dumps(message))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n"
+     ]
+    }
+   ],
+   "source": [
+    "ds = DataSet('/nilmtk/data/REDD/redd.h5')\n",
+    "building = 1\n",
+    "#elec = ds.buildings[building].elec\n",
     "\n",
+    "# List all appliances of nilmtk\n",
+    "appliance_types = set()\n",
+    "for appliance in nilmtk.global_meter_group.appliances:\n",
+    "    appliance_types.add(appliance.type['type'])\n",
+    "# Count quantity of appliances at dataset\n",
+    "out = {}\n",
+    "elec = ds.buildings[1].elec\n",
+    "\n",
+    "sendEvents = 0\n",
+    "eventBatch = []\n",
+    "for i, meter in enumerate(elec.submeters().meters):\n",
+    "    #print(\"{} -- {} -- {}\".format(i,meter,type(meter)))\n",
+    "    power = meter.power_series()\n",
+    "    chunk = next(power)\n",
+    "    #print(meter.label(pretty=True))\n",
+    "    df = next(meter.load(sample_period=60))\n",
+    "    count = 0\n",
+    "\n",
+    "    if isinstance(meter.instance(), tuple):\n",
+    "        instance = '_'.join(str(e) for e in meter.instance())\n",
+    "    else:\n",
+    "        instance = meter.instance()\n",
+    "    applianceType = meter.label(pretty=True)\n",
+    "    #host = 'http://live.intelie.com/services/plugin-restinput/testeThiago/get?'\n",
+    "    host = 'https://live.intelie.com/services/plugin-restinput/testeThiago/batch/REDD?'\n",
+    "    \n",
+    "    df_size = len(df)\n",
     "    for line in df.itertuples():\n",
     "        event = {'__type':'REDD',\n",
     "                 'building':1,\n",
     "                 'applianceType':applianceType, \n",
     "                 'instance':instance, \n",
-    "                 'power':line[1], \n",
-    "                 'measureTime':int(line[0].value/1000000)\n",
-    "                 #'__skiprealtime':'true',\n",
-    "                 #'__overwrite':'['+'\"applianceType\"'+','+'\"instance\"'+']'\n",
+    "                 'power':str(line[1]), \n",
+    "                 'timestamp':int(line[0].value/1000000),\n",
+    "                 '__overwrite':[\"applianceType\",\"instance\",\"timestamp\"],\n",
+    "                 '__skiprealtime':True\n",
     "                }\n",
-    "        #print(event)\n",
-    "        u = requests.get(host+urllib.urlencode(event), auth=(user, password))\n",
-    "        #print u.url\n",
+    "        \n",
     "        sendEvents += 1\n",
     "        count += 1\n",
-    "        if sendEvents%1000 == 0:\n",
-    "            sleep(60)\n",
-    "            #break\n",
+    "        eventBatch.append(event)\n",
+    "        if (count%1000 == 0 or count == df_size):\n",
+    "            print(count)\n",
+    "            u = requests.post(host, headers=headers, data=json.dumps(eventBatch))\n",
+    "            eventBatch = []\n",
+    "            #print(json.dumps(eventBatch))\n",
+    "            sleep(1)\n",
     "    print(\"Was sended {} events of the appliance {}[{}]\".format(count, applianceType, instance))\n",
     "print(\"Was sended {} events of the building {}\".format(sendEvents, building))"
    ]
