--- a/Send_events_LIVE.ipynb
+++ b/Send_events_LIVE.ipynb
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "metadata": {
     "collapsed": false
    },
@@ -432,7 +432,874 @@
       "3000\n",
       "4000\n",
       "5000\n",
-      "6000\n"
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "10000\n",
+      "11000\n",
+      "12000\n",
+      "13000\n",
+      "14000\n",
+      "15000\n",
+      "16000\n",
+      "17000\n",
+      "18000\n",
+      "19000\n",
+      "20000\n",
+      "21000\n",
+      "22000\n",
+      "23000\n",
+      "24000\n",
+      "25000\n",
+      "26000\n",
+      "27000\n",
+      "28000\n",
+      "29000\n",
+      "30000\n",
+      "31000\n",
+      "32000\n",
+      "33000\n",
+      "34000\n",
+      "35000\n",
+      "36000\n",
+      "37000\n",
+      "38000\n",
+      "39000\n",
+      "40000\n",
+      "41000\n",
+      "42000\n",
+      "43000\n",
+      "44000\n",
+      "45000\n",
+      "46000\n",
+      "47000\n",
+      "48000\n",
+      "49000\n",
+      "50000\n",
+      "51000\n",
+      "52000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Fridge[5]\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "10000\n",
+      "11000\n",
+      "12000\n",
+      "13000\n",
+      "14000\n",
+      "15000\n",
+      "16000\n",
+      "17000\n",
+      "18000\n",
+      "19000\n",
+      "20000\n",
+      "21000\n",
+      "22000\n",
+      "23000\n",
+      "24000\n",
+      "25000\n",
+      "26000\n",
+      "27000\n",
+      "28000\n",
+      "29000\n",
+      "30000\n",
+      "31000\n",
+      "32000\n",
+      "33000\n",
+      "34000\n",
+      "35000\n",
+      "36000\n",
+      "37000\n",
+      "38000\n",
+      "39000\n",
+      "40000\n",
+      "41000\n",
+      "42000\n",
+      "43000\n",
+      "44000\n",
+      "45000\n",
+      "46000\n",
+      "47000\n",
+      "48000\n",
+      "49000\n",
+      "50000\n",
+      "51000\n",
+      "52000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Dish washer[6]\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "10000\n",
+      "11000\n",
+      "12000\n",
+      "13000\n",
+      "14000\n",
+      "15000\n",
+      "16000\n",
+      "17000\n",
+      "18000\n",
+      "19000\n",
+      "20000\n",
+      "21000\n",
+      "22000\n",
+      "23000\n",
+      "24000\n",
+      "25000\n",
+      "26000\n",
+      "27000\n",
+      "28000\n",
+      "29000\n",
+      "30000\n",
+      "31000\n",
+      "32000\n",
+      "33000\n",
+      "34000\n",
+      "35000\n",
+      "36000\n",
+      "37000\n",
+      "38000\n",
+      "39000\n",
+      "40000\n",
+      "41000\n",
+      "42000\n",
+      "43000\n",
+      "44000\n",
+      "45000\n",
+      "46000\n",
+      "47000\n",
+      "48000\n",
+      "49000\n",
+      "50000\n",
+      "51000\n",
+      "52000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Sockets[7]\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "10000\n",
+      "11000\n",
+      "12000\n",
+      "13000\n",
+      "14000\n",
+      "15000\n",
+      "16000\n",
+      "17000\n",
+      "18000\n",
+      "19000\n",
+      "20000\n",
+      "21000\n",
+      "22000\n",
+      "23000\n",
+      "24000\n",
+      "25000\n",
+      "26000\n",
+      "27000\n",
+      "28000\n",
+      "29000\n",
+      "30000\n",
+      "31000\n",
+      "32000\n",
+      "33000\n",
+      "34000\n",
+      "35000\n",
+      "36000\n",
+      "37000\n",
+      "38000\n",
+      "39000\n",
+      "40000\n",
+      "41000\n",
+      "42000\n",
+      "43000\n",
+      "44000\n",
+      "45000\n",
+      "46000\n",
+      "47000\n",
+      "48000\n",
+      "49000\n",
+      "50000\n",
+      "51000\n",
+      "52000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Sockets[8]\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "10000\n",
+      "11000\n",
+      "12000\n",
+      "13000\n",
+      "14000\n",
+      "15000\n",
+      "16000\n",
+      "17000\n",
+      "18000\n",
+      "19000\n",
+      "20000\n",
+      "21000\n",
+      "22000\n",
+      "23000\n",
+      "24000\n",
+      "25000\n",
+      "26000\n",
+      "27000\n",
+      "28000\n",
+      "29000\n",
+      "30000\n",
+      "31000\n",
+      "32000\n",
+      "33000\n",
+      "34000\n",
+      "35000\n",
+      "36000\n",
+      "37000\n",
+      "38000\n",
+      "39000\n",
+      "40000\n",
+      "41000\n",
+      "42000\n",
+      "43000\n",
+      "44000\n",
+      "45000\n",
+      "46000\n",
+      "47000\n",
+      "48000\n",
+      "49000\n",
+      "50000\n",
+      "51000\n",
+      "52000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Light[9]\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "10000\n",
+      "11000\n",
+      "12000\n",
+      "13000\n",
+      "14000\n",
+      "15000\n",
+      "16000\n",
+      "17000\n",
+      "18000\n",
+      "19000\n",
+      "20000\n",
+      "21000\n",
+      "22000\n",
+      "23000\n",
+      "24000\n",
+      "25000\n",
+      "26000\n",
+      "27000\n",
+      "28000\n",
+      "29000\n",
+      "30000\n",
+      "31000\n",
+      "32000\n",
+      "33000\n",
+      "34000\n",
+      "35000\n",
+      "36000\n",
+      "37000\n",
+      "38000\n",
+      "39000\n",
+      "40000\n",
+      "41000\n",
+      "42000\n",
+      "43000\n",
+      "44000\n",
+      "45000\n",
+      "46000\n",
+      "47000\n",
+      "48000\n",
+      "49000\n",
+      "50000\n",
+      "51000\n",
+      "52000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Microwave[11]\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "10000\n",
+      "11000\n",
+      "12000\n",
+      "13000\n",
+      "14000\n",
+      "15000\n",
+      "16000\n",
+      "17000\n",
+      "18000\n",
+      "19000\n",
+      "20000\n",
+      "21000\n",
+      "22000\n",
+      "23000\n",
+      "24000\n",
+      "25000\n",
+      "26000\n",
+      "27000\n",
+      "28000\n",
+      "29000\n",
+      "30000\n",
+      "31000\n",
+      "32000\n",
+      "33000\n",
+      "34000\n",
+      "35000\n",
+      "36000\n",
+      "37000\n",
+      "38000\n",
+      "39000\n",
+      "40000\n",
+      "41000\n",
+      "42000\n",
+      "43000\n",
+      "44000\n",
+      "45000\n",
+      "46000\n",
+      "47000\n",
+      "48000\n",
+      "49000\n",
+      "50000\n",
+      "51000\n",
+      "52000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Unknown[12]\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "10000\n",
+      "11000\n",
+      "12000\n",
+      "13000\n",
+      "14000\n",
+      "15000\n",
+      "16000\n",
+      "17000\n",
+      "18000\n",
+      "19000\n",
+      "20000\n",
+      "21000\n",
+      "22000\n",
+      "23000\n",
+      "24000\n",
+      "25000\n",
+      "26000\n",
+      "27000\n",
+      "28000\n",
+      "29000\n",
+      "30000\n",
+      "31000\n",
+      "32000\n",
+      "33000\n",
+      "34000\n",
+      "35000\n",
+      "36000\n",
+      "37000\n",
+      "38000\n",
+      "39000\n",
+      "40000\n",
+      "41000\n",
+      "42000\n",
+      "43000\n",
+      "44000\n",
+      "45000\n",
+      "46000\n",
+      "47000\n",
+      "48000\n",
+      "49000\n",
+      "50000\n",
+      "51000\n",
+      "52000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Electric space heater[13]\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "10000\n",
+      "11000\n",
+      "12000\n",
+      "13000\n",
+      "14000\n",
+      "15000\n",
+      "16000\n",
+      "17000\n",
+      "18000\n",
+      "19000\n",
+      "20000\n",
+      "21000\n",
+      "22000\n",
+      "23000\n",
+      "24000\n",
+      "25000\n",
+      "26000\n",
+      "27000\n",
+      "28000\n",
+      "29000\n",
+      "30000\n",
+      "31000\n",
+      "32000\n",
+      "33000\n",
+      "34000\n",
+      "35000\n",
+      "36000\n",
+      "37000\n",
+      "38000\n",
+      "39000\n",
+      "40000\n",
+      "41000\n",
+      "42000\n",
+      "43000\n",
+      "44000\n",
+      "45000\n",
+      "46000\n",
+      "47000\n",
+      "48000\n",
+      "49000\n",
+      "50000\n",
+      "51000\n",
+      "52000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Electric stove[14]\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "10000\n",
+      "11000\n",
+      "12000\n",
+      "13000\n",
+      "14000\n",
+      "15000\n",
+      "16000\n",
+      "17000\n",
+      "18000\n",
+      "19000\n",
+      "20000\n",
+      "21000\n",
+      "22000\n",
+      "23000\n",
+      "24000\n",
+      "25000\n",
+      "26000\n",
+      "27000\n",
+      "28000\n",
+      "29000\n",
+      "30000\n",
+      "31000\n",
+      "32000\n",
+      "33000\n",
+      "34000\n",
+      "35000\n",
+      "36000\n",
+      "37000\n",
+      "38000\n",
+      "39000\n",
+      "40000\n",
+      "41000\n",
+      "42000\n",
+      "43000\n",
+      "44000\n",
+      "45000\n",
+      "46000\n",
+      "47000\n",
+      "48000\n",
+      "49000\n",
+      "50000\n",
+      "51000\n",
+      "52000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Sockets[15]\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "10000\n",
+      "11000\n",
+      "12000\n",
+      "13000\n",
+      "14000\n",
+      "15000\n",
+      "16000\n",
+      "17000\n",
+      "18000\n",
+      "19000\n",
+      "20000\n",
+      "21000\n",
+      "22000\n",
+      "23000\n",
+      "24000\n",
+      "25000\n",
+      "26000\n",
+      "27000\n",
+      "28000\n",
+      "29000\n",
+      "30000\n",
+      "31000\n",
+      "32000\n",
+      "33000\n",
+      "34000\n",
+      "35000\n",
+      "36000\n",
+      "37000\n",
+      "38000\n",
+      "39000\n",
+      "40000\n",
+      "41000\n",
+      "42000\n",
+      "43000\n",
+      "44000\n",
+      "45000\n",
+      "46000\n",
+      "47000\n",
+      "48000\n",
+      "49000\n",
+      "50000\n",
+      "51000\n",
+      "52000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Sockets[16]\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "10000\n",
+      "11000\n",
+      "12000\n",
+      "13000\n",
+      "14000\n",
+      "15000\n",
+      "16000\n",
+      "17000\n",
+      "18000\n",
+      "19000\n",
+      "20000\n",
+      "21000\n",
+      "22000\n",
+      "23000\n",
+      "24000\n",
+      "25000\n",
+      "26000\n",
+      "27000\n",
+      "28000\n",
+      "29000\n",
+      "30000\n",
+      "31000\n",
+      "32000\n",
+      "33000\n",
+      "34000\n",
+      "35000\n",
+      "36000\n",
+      "37000\n",
+      "38000\n",
+      "39000\n",
+      "40000\n",
+      "41000\n",
+      "42000\n",
+      "43000\n",
+      "44000\n",
+      "45000\n",
+      "46000\n",
+      "47000\n",
+      "48000\n",
+      "49000\n",
+      "50000\n",
+      "51000\n",
+      "52000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Light[17]\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "10000\n",
+      "11000\n",
+      "12000\n",
+      "13000\n",
+      "14000\n",
+      "15000\n",
+      "16000\n",
+      "17000\n",
+      "18000\n",
+      "19000\n",
+      "20000\n",
+      "21000\n",
+      "22000\n",
+      "23000\n",
+      "24000\n",
+      "25000\n",
+      "26000\n",
+      "27000\n",
+      "28000\n",
+      "29000\n",
+      "30000\n",
+      "31000\n",
+      "32000\n",
+      "33000\n",
+      "34000\n",
+      "35000\n",
+      "36000\n",
+      "37000\n",
+      "38000\n",
+      "39000\n",
+      "40000\n",
+      "41000\n",
+      "42000\n",
+      "43000\n",
+      "44000\n",
+      "45000\n",
+      "46000\n",
+      "47000\n",
+      "48000\n",
+      "49000\n",
+      "50000\n",
+      "51000\n",
+      "52000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Light[18]\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "10000\n",
+      "11000\n",
+      "12000\n",
+      "13000\n",
+      "14000\n",
+      "15000\n",
+      "16000\n",
+      "17000\n",
+      "18000\n",
+      "19000\n",
+      "20000\n",
+      "21000\n",
+      "22000\n",
+      "23000\n",
+      "24000\n",
+      "25000\n",
+      "26000\n",
+      "27000\n",
+      "28000\n",
+      "29000\n",
+      "30000\n",
+      "31000\n",
+      "32000\n",
+      "33000\n",
+      "34000\n",
+      "35000\n",
+      "36000\n",
+      "37000\n",
+      "38000\n",
+      "39000\n",
+      "40000\n",
+      "41000\n",
+      "42000\n",
+      "43000\n",
+      "44000\n",
+      "45000\n",
+      "46000\n",
+      "47000\n",
+      "48000\n",
+      "49000\n",
+      "50000\n",
+      "51000\n",
+      "52000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Unknown[19]\n",
+      "Loading data for meter ElecMeterID(instance=4, building=1, dataset='REDD')     \n",
+      "Done loading data all meters for this chunk.\n",
+      "Loading data for meter ElecMeterID(instance=4, building=1, dataset='REDD')     \n",
+      "Done loading data all meters for this chunk.\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "10000\n",
+      "11000\n",
+      "12000\n",
+      "13000\n",
+      "14000\n",
+      "15000\n",
+      "16000\n",
+      "17000\n",
+      "18000\n",
+      "19000\n",
+      "20000\n",
+      "21000\n",
+      "22000\n",
+      "23000\n",
+      "24000\n",
+      "25000\n",
+      "26000\n",
+      "27000\n",
+      "28000\n",
+      "29000\n",
+      "30000\n",
+      "31000\n",
+      "32000\n",
+      "33000\n",
+      "34000\n",
+      "35000\n",
+      "36000\n",
+      "37000\n",
+      "38000\n",
+      "39000\n",
+      "40000\n",
+      "41000\n",
+      "42000\n",
+      "43000\n",
+      "44000\n",
+      "45000\n",
+      "46000\n",
+      "47000\n",
+      "48000\n",
+      "49000\n",
+      "50000\n",
+      "51000\n",
+      "52000\n",
+      "52234\n",
+      "Was sended 52234 events of the appliance Electric oven[3_4]\n",
+      "Loading data for meter ElecMeterID(instance=20, building=1, dataset='REDD')     \n",
+      "Done loading data all meters for this chunk.\n",
+      "Loading data for meter ElecMeterID(instance=20, building=1, dataset='REDD')     \n",
+      "Done loading data all meters for this chunk.\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "10000\n",
+      "11000\n",
+      "12000\n",
+      "13000\n",
+      "14000\n",
+      "15000\n",
+      "16000\n",
+      "17000\n",
+      "18000\n",
+      "19000\n",
+      "20000\n",
+      "21000\n",
+      "22000\n",
+      "23000\n",
+      "24000\n",
+      "25000\n",
+      "26000\n",
+      "27000\n",
+      "28000\n",
+      "29000\n",
+      "30000\n",
+      "31000\n",
+      "32000\n",
+      "33000\n",
+      "34000\n",
+      "35000\n",
+      "36000\n",
+      "37000\n",
+      "38000\n",
+      "39000\n",
+      "40000\n",
+      "41000\n",
+      "42000\n",
+      "43000\n",
+      "44000\n",
+      "45000\n",
+      "46000\n",
+      "47000\n",
+      "48000\n",
+      "49000\n",
+      "50000\n",
+      "51000\n",
+      "52000\n",
+      "52234\n",
+      "Was sended 52234 events of the appliance Washer dryer[10_20]\n",
+      "Was sended 835758 events of the building 1\n"
      ]
     }
    ],
@@ -484,7 +1351,7 @@
     "        eventBatch.append(event)\n",
     "        if (count%1000 == 0 or count == df_size):\n",
     "            print(count)\n",
-    "            u = requests.post(host, headers=headers, data=json.dumps(eventBatch))\n",
+    "            #u = requests.post(host, headers=headers, data=json.dumps(eventBatch))\n",
     "            eventBatch = []\n",
     "            #print(json.dumps(eventBatch))\n",
     "            sleep(1)\n",
