--- a/Disaggregation Algorithm.ipynb
+++ b/Disaggregation Algorithm.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 106,
    "metadata": {
     "collapsed": false
    },
@@ -146,28 +146,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(812766, 2)\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
       "Loading data for meter ElecMeterID(instance=4, building=1, dataset='REDD')     \n",
       "Done loading data all meters for this chunk.\n",
       "Loading data for meter ElecMeterID(instance=20, building=1, dataset='REDD')     \n",
       "Done loading data all meters for this chunk.\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Loading data for meter ElecMeterID(instance=4, building=1, dataset='REDD')     \n",
-      "Done loading data all meters for this chunk.\n",
-      "Loading data for meter ElecMeterID(instance=20, building=1, dataset='REDD')     \n",
-      "Done loading data all meters for this chunk.\n",
-      "(270921, 16)\n"
+      "DatetimeIndex(['2011-04-18 09:22:09-04:00', '2011-04-18 09:22:10-04:00',\n",
+      "               '2011-04-18 09:22:11-04:00', '2011-04-18 09:22:12-04:00',\n",
+      "               '2011-04-18 09:22:13-04:00', '2011-04-18 09:22:14-04:00',\n",
+      "               '2011-04-18 09:22:15-04:00', '2011-04-18 09:22:16-04:00',\n",
+      "               '2011-04-18 09:22:17-04:00', '2011-04-18 09:22:18-04:00', \n",
+      "               ...\n",
+      "               '2011-04-27 19:08:05-04:00', '2011-04-27 19:08:06-04:00',\n",
+      "               '2011-04-27 19:08:07-04:00', '2011-04-27 19:08:08-04:00',\n",
+      "               '2011-04-27 19:08:09-04:00', '2011-04-27 19:08:10-04:00',\n",
+      "               '2011-04-27 19:08:11-04:00', '2011-04-27 19:08:12-04:00',\n",
+      "               '2011-04-27 19:08:13-04:00', '2011-04-27 19:08:14-04:00'],\n",
+      "              dtype='datetime64[ns]', length=812766, freq=None, tz='US/Eastern')\n",
+      "DatetimeIndex(['2011-04-18 09:22:12-04:00', '2011-04-18 09:22:15-04:00',\n",
+      "               '2011-04-18 09:22:18-04:00', '2011-04-18 09:22:21-04:00',\n",
+      "               '2011-04-18 09:22:24-04:00', '2011-04-18 09:22:27-04:00',\n",
+      "               '2011-04-18 09:22:30-04:00', '2011-04-18 09:22:33-04:00',\n",
+      "               '2011-04-18 09:22:36-04:00', '2011-04-18 09:22:39-04:00', \n",
+      "               ...\n",
+      "               '2011-04-27 19:07:45-04:00', '2011-04-27 19:07:48-04:00',\n",
+      "               '2011-04-27 19:07:51-04:00', '2011-04-27 19:07:54-04:00',\n",
+      "               '2011-04-27 19:07:57-04:00', '2011-04-27 19:08:00-04:00',\n",
+      "               '2011-04-27 19:08:03-04:00', '2011-04-27 19:08:06-04:00',\n",
+      "               '2011-04-27 19:08:09-04:00', '2011-04-27 19:08:12-04:00'],\n",
+      "              dtype='datetime64[ns]', length=270921, freq=None, tz='US/Eastern')\n"
      ]
     }
    ],
    "source": [
-    "print(train_elec.mains().dataframe_of_meters().shape) #meters #available_ac_types('power') #instance() #nested_metergroups #.appliances\n",
+    "#print(train_elec.mains().dataframe_of_meters().shape) #meters #available_ac_types('power') #instance() #nested_metergroups #.appliances\n",
     "metergroup = train.buildings[building_number].elec\n",
-    "print(type(train_elec.mains().dataframe_of_meters()))\n",
-    "print(type(metergroup.submeters().dataframe_of_meters()))\n",
-    "print(metergroup.submeters().dataframe_of_meters().shape)\n",
+    "#print(type(train_elec.mains().dataframe_of_meters()))\n",
+    "#print(type(metergroup.submeters().dataframe_of_meters()))\n",
+    "#print(metergroup.submeters().dataframe_of_meters().shape)\n",
     "\n",
+    "main = train_elec.mains().dataframe_of_meters()\n",
+    "meters = train.buildings[building_number].elec.submeters().dataframe_of_meters()\n",
+    "print(main.index)\n",
+    "print(meters.index)\n",
+    "#joinMainMeters = meters.merge(main)\n",
+    "\n",
+    "#print(\"mains {} -- meters {} -- merged {}\".format(main.shape, meters.shape, joinMainMeters.shape))\n",
     "#choose data from mains and meters, that have data in both dataframes"
    ]
   }
