--- a/Send_events_LIVE.ipynb
+++ b/Send_events_LIVE.ipynb
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -413,12 +413,12 @@
     "    'Content-Type': \"application/json\",\n",
     "    'Authorization': \"Basic dGhpYWdvLmdpYWNoZXR0b0BpbnRlbGllLmNvbS5icjowLWpWU0ZjQA==\"\n",
     "    }\n",
-    "u = requests.post(host, headers=headers, data=json.dumps(message))"
+    "#u = requests.post(host, headers=headers, data=json.dumps(message))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -434,23 +434,205 @@
       "25000\n",
       "30000\n",
       "35000\n",
-      "38604\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-fc82901495c3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     50\u001b[0m             \u001b[0meventBatch\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     51\u001b[0m             \u001b[1;31m#print(json.dumps(eventBatch))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 52\u001b[1;33m             \u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     53\u001b[0m     \u001b[1;32mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Was sended {} events of the appliance {}[{}]\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcount\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mapplianceType\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minstance\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     54\u001b[0m \u001b[1;32mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Was sended {} events of the building {}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msendEvents\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbuilding\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "40000\n",
+      "45000\n",
+      "50000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Fridge[5]\n",
+      "5000\n",
+      "10000\n",
+      "15000\n",
+      "20000\n",
+      "25000\n",
+      "30000\n",
+      "35000\n",
+      "40000\n",
+      "45000\n",
+      "50000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Dish washer[6]\n",
+      "5000\n",
+      "10000\n",
+      "15000\n",
+      "20000\n",
+      "25000\n",
+      "30000\n",
+      "35000\n",
+      "40000\n",
+      "45000\n",
+      "50000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Sockets[7]\n",
+      "5000\n",
+      "10000\n",
+      "15000\n",
+      "20000\n",
+      "25000\n",
+      "30000\n",
+      "35000\n",
+      "40000\n",
+      "45000\n",
+      "50000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Sockets[8]\n",
+      "5000\n",
+      "10000\n",
+      "15000\n",
+      "20000\n",
+      "25000\n",
+      "30000\n",
+      "35000\n",
+      "40000\n",
+      "45000\n",
+      "50000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Light[9]\n",
+      "5000\n",
+      "10000\n",
+      "15000\n",
+      "20000\n",
+      "25000\n",
+      "30000\n",
+      "35000\n",
+      "40000\n",
+      "45000\n",
+      "50000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Microwave[11]\n",
+      "5000\n",
+      "10000\n",
+      "15000\n",
+      "20000\n",
+      "25000\n",
+      "30000\n",
+      "35000\n",
+      "40000\n",
+      "45000\n",
+      "50000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Unknown[12]\n",
+      "5000\n",
+      "10000\n",
+      "15000\n",
+      "20000\n",
+      "25000\n",
+      "30000\n",
+      "35000\n",
+      "40000\n",
+      "45000\n",
+      "50000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Electric space heater[13]\n",
+      "5000\n",
+      "10000\n",
+      "15000\n",
+      "20000\n",
+      "25000\n",
+      "30000\n",
+      "35000\n",
+      "40000\n",
+      "45000\n",
+      "50000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Electric stove[14]\n",
+      "5000\n",
+      "10000\n",
+      "15000\n",
+      "20000\n",
+      "25000\n",
+      "30000\n",
+      "35000\n",
+      "40000\n",
+      "45000\n",
+      "50000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Sockets[15]\n",
+      "5000\n",
+      "10000\n",
+      "15000\n",
+      "20000\n",
+      "25000\n",
+      "30000\n",
+      "35000\n",
+      "40000\n",
+      "45000\n",
+      "50000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Sockets[16]\n",
+      "5000\n",
+      "10000\n",
+      "15000\n",
+      "20000\n",
+      "25000\n",
+      "30000\n",
+      "35000\n",
+      "40000\n",
+      "45000\n",
+      "50000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Light[17]\n",
+      "5000\n",
+      "10000\n",
+      "15000\n",
+      "20000\n",
+      "25000\n",
+      "30000\n",
+      "35000\n",
+      "40000\n",
+      "45000\n",
+      "50000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Light[18]\n",
+      "5000\n",
+      "10000\n",
+      "15000\n",
+      "20000\n",
+      "25000\n",
+      "30000\n",
+      "35000\n",
+      "40000\n",
+      "45000\n",
+      "50000\n",
+      "52235\n",
+      "Was sended 52235 events of the appliance Unknown[19]\n",
+      "Loading data for meter ElecMeterID(instance=4, building=1, dataset='REDD')     \n",
+      "Done loading data all meters for this chunk.\n",
+      "Loading data for meter ElecMeterID(instance=4, building=1, dataset='REDD')     \n",
+      "Done loading data all meters for this chunk.\n",
+      "5000\n",
+      "10000\n",
+      "15000\n",
+      "20000\n",
+      "25000\n",
+      "30000\n",
+      "35000\n",
+      "40000\n",
+      "45000\n",
+      "50000\n",
+      "52234\n",
+      "Was sended 52234 events of the appliance Electric oven[3_4]\n",
+      "Loading data for meter ElecMeterID(instance=20, building=1, dataset='REDD')     \n",
+      "Done loading data all meters for this chunk.\n",
+      "Loading data for meter ElecMeterID(instance=20, building=1, dataset='REDD')     \n",
+      "Done loading data all meters for this chunk.\n",
+      "5000\n",
+      "10000\n",
+      "15000\n",
+      "20000\n",
+      "25000\n",
+      "30000\n",
+      "35000\n",
+      "40000\n",
+      "45000\n",
+      "50000\n",
+      "52234\n",
+      "Was sended 52234 events of the appliance Washer dryer[10_20]\n",
+      "Was sended 835758 events of the building 1\n"
      ]
     }
    ],
    "source": [
-    "ds = DataSet('/nilmtk/data/iawe_CO.h5') #('/nilmtk/data/REDD/redd.h5')\n",
+    "ds = DataSet('/nilmtk/data/REDD/redd.h5') #('/nilmtk/data/iawe_CO.h5') \n",
     "building = 1\n",
     "#elec = ds.buildings[building].elec\n",
     "\n",
@@ -478,12 +660,12 @@
     "        instance = meter.instance()\n",
     "    applianceType = meter.label(pretty=True)\n",
     "    #host = 'http://live.intelie.com/services/plugin-restinput/testeThiago/get?'\n",
-    "    host = 'https://live.intelie.com/services/plugin-restinput/testeThiago/batch/REDD?'\n",
+    "    type = 'REDD'\n",
+    "    host = 'https://live.intelie.com/services/plugin-restinput/testeThiago/batch/{}?'.format(type)\n",
     "    \n",
     "    df_size = len(df)\n",
     "    for line in df.itertuples():\n",
-    "        event = {#'__type':'REDD',\n",
-    "                 '__type': 'REDD_CO',\n",
+    "        event = {'__type':type,\n",
     "                 'building':1,\n",
     "                 'applianceType':applianceType, \n",
     "                 'instance':instance, \n",
@@ -505,6 +687,15 @@
     "    print(\"Was sended {} events of the appliance {}[{}]\".format(count, applianceType, instance))\n",
     "print(\"Was sended {} events of the building {}\".format(sendEvents, building))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
