Change comments in some jupyters notebooks

--- a/CO_training.ipynb
+++ b/CO_training.ipynb
@@ -14,10 +14,10 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import rcParams\n",
     "import math\n",
-    "from nilmtk.metrics import f1_score # metrics is actually different; need to look at this\n",
+    "from nilmtk.metrics import f1_score\n",
     "from nilmtk.metrics import rms_error_power\n",
     "from nilmtk.metrics import mean_normalized_error_power\n",
-    "from nilmtk.disaggregate import combinatorial_optimisation # OK, only different in what is printed to screen (and this is diagonal covariance matrix)\n"
+    "from nilmtk.disaggregate import combinatorial_optimisation\n"
    ]
   },
   {
@@ -293,7 +293,7 @@
     }
    ],
    "source": [
-    "co = combinatorial_optimisation.CombinatorialOptimisation() #mk change this later  to default\n",
+    "co = combinatorial_optimisation.CombinatorialOptimisation()\n",
     "co.train(top_train_elec, sample_period=60, resample=True)\n",
     "outputAddress = \"/nilmtk/data/iawe_CO.h5\"\n",
     "output = HDFDataStore(outputAddress, 'w')\n",
