--- a/Send_events_LIVE.ipynb
+++ b/Send_events_LIVE.ipynb
@@ -680,7 +680,7 @@
     "        eventBatch.append(event)\n",
     "        if (count%5000 == 0 or count == df_size):\n",
     "            print(count)\n",
-    "            u = requests.post(host, headers=headers, data=json.dumps(eventBatch))\n",
+    "            #u = requests.post(host, headers=headers, data=json.dumps(eventBatch))\n",
     "            eventBatch = []\n",
     "            #print(json.dumps(eventBatch))\n",
     "            sleep(1)\n",
@@ -690,12 +690,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data for meter ElecMeterID(instance=20, building=1, dataset='REDD')     \n",
+      "Done loading data all meters for this chunk.\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-16-0992c36caa7a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmeter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample_period\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m60\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miteritems\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'str' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "df = next(meter.load(sample_period=60))\n",
+    "type(df.iteritems)"
+   ]
   }
  ],
  "metadata": {
