--- a/TreeRegressorAlgorithm.ipynb
+++ b/TreeRegressorAlgorithm.ipynb
@@ -1071,7 +1071,6 @@
     "\n",
     "    min_samples_split=np.arange(2, 400, 10)\n",
     "\n",
-    "    # Using mains_1, mains_2 to predict refrigerator\n",
     "    X_train1 = df1_train.iloc[:,:main.shape[1]].values\n",
     "    y_train1 = df1_train.iloc[:,main.shape[1]:].values\n",
     "    X_val1 = df1_val.iloc[:,:main.shape[1]].values\n",
@@ -1081,7 +1080,7 @@
     "    y_test1 = df1_test.iloc[:,main.shape[1]:].values\n",
     "    \n",
     "    print(X_train1.shape, y_train1.shape, X_val1.shape, y_val1.shape, X_test1.shape, y_test1.shape)\n",
-    "    #print(meter.appliances) #meter.metadata\n",
+    "    \n",
     "    tree_clfs_1, tree_losses_1 = tree_reg(X_train1, y_train1, X_val1, y_val1, min_samples_split)\n",
     "    \n",
     "    ind = np.argmin(tree_losses_1) #find best model for de appliance\n",
@@ -1390,6 +1389,126 @@
     "    mae_tree_1 = mae_loss(y_test_predict_2, y_test1)\n",
     "    print('Mean square error on test set: {}'.format(mse_tree_1))\n",
     "    print('Mean absolute error on the test set: {}'.format(mae_tree_1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5000\n",
+      "Was sended 5000 events of the appliance Microwave[11]\n",
+      "5578\n",
+      "Was sended 5578 events of the appliance Microwave[11]\n",
+      "Was sended 5578 events of the building 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from time import sleep\n",
+    "import requests\n",
+    "import urllib\n",
+    "import json\n",
+    "\n",
+    "headers = {\n",
+    "            'Content-Type': \"application/json\",\n",
+    "            'Authorization': \"Basic dGhpYWdvLmdpYWNoZXR0b0BpbnRlbGllLmNvbS5icjowLWpWU0ZjQA==\"\n",
+    "            }\n",
+    "\n",
+    "folder = '/nilmtk/data/EA006-NILM-project/Training_output/'\n",
+    "building = 1\n",
+    "file = '11_Microwave_out.pkl' #'9_Light_out.pkl' #'8_Sockets_out.pkl' #'5_Fridge_out.pkl'\n",
+    "instance = 11 #9 #8 #6 #5\n",
+    "applianceType = 'Microwave' #'Light' #'Sockets' #'Dish washer' #'Fridge'\n",
+    "\n",
+    "type = 'REDD_TR'\n",
+    "host = 'https://live.intelie.com/services/plugin-restinput/testeThiago/batch/{}?'.format(type)\n",
+    "    \n",
+    "filePath = folder + file\n",
+    "with open(filePath) as f:  # Python 3: open(..., 'rb')\n",
+    "    obj = pickle.load(f)\n",
+    "\n",
+    "y_test_predict = obj['model'].predict(X_test1)\n",
+    "#print(type(y_test_predict), type(X_test1), type(df1_test))\n",
+    "\n",
+    "sendEvents = 0\n",
+    "count = 0\n",
+    "n = 0\n",
+    "eventBatch = []\n",
+    "\n",
+    "df_size = len(df1_test)\n",
+    "for line in df1_test.iterrows():\n",
+    "    event = {'__type':type,\n",
+    "             'building':1,\n",
+    "             'applianceType':applianceType, \n",
+    "             'instance':instance, \n",
+    "             'power':str(y_test_predict[n]), \n",
+    "             'timestamp':int(line[0].value/1000000),\n",
+    "             '__overwrite':[\"applianceType\",\"instance\",\"timestamp\"],\n",
+    "             '__skiprealtime':True\n",
+    "            }\n",
+    "\n",
+    "    sendEvents += 1\n",
+    "    count += 1\n",
+    "    eventBatch.append(event)\n",
+    "    if (count%5000 == 0 or count == df_size):\n",
+    "        print(count)\n",
+    "        u = requests.post(host, headers=headers, data=json.dumps(eventBatch))\n",
+    "        eventBatch = []\n",
+    "        #print(json.dumps(eventBatch))\n",
+    "        sleep(1)\n",
+    "        print(\"Was sended {} events of the appliance {}[{}]\".format(count, applianceType, instance))\n",
+    "print(\"Was sended {} events of the building {}\".format(sendEvents, building))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(<type 'numpy.ndarray'>, <type 'numpy.ndarray'>, <class 'pandas.core.frame.DataFrame'>)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'instancemethod' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-62-c624363e7b90>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_test_predict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf1_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdf1_test\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitertuples\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m1000000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test_predict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m>\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'instancemethod' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "folder = '/nilmtk/data/EA006-NILM-project/Training_output/'\n",
+    "file = '5_Fridge_out.pkl'\n",
+    "filePath = folder + file\n",
+    "with open(filePath) as f:  # Python 3: open(..., 'rb')\n",
+    "    obj = pickle.load(f)\n",
+    "\n",
+    "y_test_predict = obj['model'].predict(X_test1)\n",
+    "print(type(y_test_predict), type(X_test1), type(df1_test))\n",
+    "n = 0\n",
+    "for i in df1_test.iterrows():\n",
+    "    print int(i[0].value/1000000), y_test_predict[n]\n",
+    "    if n>10:\n",
+    "        break\n",
+    "    n += 1"
    ]
   }
  ],
